
  * Added new menu item in the Instruments Database window: Edit/Find

  * Remember the last used tab in the Preferences dialog

  * Renamed the column labels in the Channel Routing dialog: The column
    representing the sampler channel's audio channels is "Audio In" and
    the column representing the audio device's channels is "Audio Out"

  * Fantasia:
    - Major memory optimizations when too many sampler channels are present
    - Added option to show the Instruments Database on
      the Right-Side Pane of the Fantasia's main window
      (choose Edit/Preferences, then click the `View' tab)
    - Implemented pluggable channel view
    - Implemented Small View for sampler channels
      (right-click on the sampler channel then choose Small View)
    - Implemented option to choose default sampler channel view
      (choose Edit/Preferences, then click the `Defaults' tab)
    - Added context menu to sampler channels
    - Implemented option to show different channel view when
      the mouse pointer is over sampler channel
      (choose Edit/Preferences, then click the `Defaults' tab)
    - The sampler channels are now referenced by their position
      in the list, not by their ID
    - Implemented options to show the channel number and/or the MIDI
      input port/channel on the sampler channel screen when using Small View
      (choose Edit/Preferences, then click the `Channels' tab)
    - Migrated to substance 5

  * Bug fixes:
    - bugfix: JSampler took forever to load a configuration with
      too many sampler channels
    - fixed bug #66
    - fixed a null pointer exception in the AudioDevicePane, when JACK
      driver is used and the additional device parameters are shown.
    - fixed bug #76
    - fixed bug #77
    - fixed bug #84
    - Some minor bugfixes and enhancements

JSampler v0.8a: 2007-12-06
  * Added new menu item: Help/Online Tutorial

  * Implemented support for retrieving instrument information
    from instrument files
